/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Common/Protos/decimal_value.proto";

option csharp_namespace = "Energinet.DataHub.Wholesale.Contracts.IntegrationEvents";


/*
 * A calculation will result in one or more energy results. Each result is
 * published as an instance of this type.
 */
message EnergyResultProducedV2 {
    /*
     * The ID of the calculation creating the result.
     * The ID is a UUID consisting of hexadecimal digits in the form XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX.
     * Example: 65801e3c-5131-426e-b1bb-7b186349c996
     */
    string calculation_id = 1;

    // The level at which the result is aggregated.
    oneof aggregation_level {
        AggregationPerGridArea aggregation_per_gridarea = 2;
        AggregationPerEnergySupplierPerGridArea aggregation_per_energysupplier_per_gridarea = 3;
        AggregationPerBalanceResponsiblePartyPerGridArea aggregation_per_balanceresponsibleparty_per_gridarea = 4;
        AggregationPerEnergySupplierPerBalanceResponsiblePartyPerGridArea aggregation_per_energysupplier_per_balanceresponsibleparty_per_gridarea = 5;
    }

    CalculationType calculation_type = 10;

    TimeSeriesType time_series_type = 11;

    /*
     * The beginning of the calculation period.
     * The time is included in the period and is identical to the time of
     * the first time series point in the results.
     */
    google.protobuf.Timestamp period_start_utc = 12;

    /*
     * The end of the calculation period.
     * The time is excluded from the period.
     */
    google.protobuf.Timestamp period_end_utc = 13;

    Resolution resolution = 14;

    QuantityUnit quantity_unit = 15;

    /*
     * The grid area from which the exchange is leaving.
     * The exchange goes into the grid area specified in the aggregation.
     * Only applies to results with exchange time series types.
     */
    google.protobuf.StringValue from_grid_area_code = 16;

    repeated TimeSeriesPoint time_series_points = 17;

    /*
     * The version of the calculation result. It is a positive integer (int64).
     */
    int64 calculation_result_version = 18;

    enum TimeSeriesType {

        reserved 6, 7, 8, 10, 11; // No longer used

        /*
         * Unspecified is unused but according to best practice.
         * Read more at https://protobuf.dev/programming-guides/style/#enums.
         */
        TIME_SERIES_TYPE_UNSPECIFIED = 0;
        TIME_SERIES_TYPE_PRODUCTION = 1;
        TIME_SERIES_TYPE_NON_PROFILED_CONSUMPTION = 2;
        TIME_SERIES_TYPE_FLEX_CONSUMPTION = 3;
        TIME_SERIES_TYPE_NET_EXCHANGE_PER_GA = 4;
        TIME_SERIES_TYPE_NET_EXCHANGE_PER_NEIGHBORING_GA = 5;
        TIME_SERIES_TYPE_TOTAL_CONSUMPTION = 9;
    }

    message AggregationPerGridArea {
        /*
         * The grid area code is a 3 character string consisting solely of digits.
         * Examples:
         *   543
         *   020
         */
        string grid_area_code = 1;
    }

    message AggregationPerEnergySupplierPerGridArea {
        /*
         * The grid area code is a 3 character string consisting solely of digits.
         * Examples:
         *   543
         *   020
         */
        string grid_area_code = 1;

        string energy_supplier_id = 2;
    }

    message AggregationPerBalanceResponsiblePartyPerGridArea {
        /*
         * The grid area code is a 3 character string consisting solely of digits.
         * Examples:
         *   543
         *   020
         */
        string grid_area_code = 1;

        string balance_responsible_id = 2;
    }

    message AggregationPerEnergySupplierPerBalanceResponsiblePartyPerGridArea {
        /*
         * The grid area code is a 3 character string consisting solely of digits.
         * Examples:
         *   543
         *   020
         */
        string grid_area_code = 1;

        string balance_responsible_id = 2;

        string energy_supplier_id = 3;
    }

    enum CalculationType {
        /*
         * Unspecified is unused but according to best practice.
         * Read more at https://protobuf.dev/programming-guides/style/#enums.
         */
        CALCULATION_TYPE_UNSPECIFIED = 0;
        CALCULATION_TYPE_BALANCE_FIXING = 1;
        CALCULATION_TYPE_AGGREGATION = 2;
        CALCULATION_TYPE_WHOLESALE_FIXING = 3;
        CALCULATION_TYPE_FIRST_CORRECTION_SETTLEMENT = 4;
        CALCULATION_TYPE_SECOND_CORRECTION_SETTLEMENT = 5;
        CALCULATION_TYPE_THIRD_CORRECTION_SETTLEMENT = 6;
    }

    enum QuantityUnit {
        /*
         * Unspecified is unused but according to best practice.
         * Read more at https://protobuf.dev/programming-guides/style/#enums.
         */
        QUANTITY_UNIT_UNSPECIFIED = 0;

        // States that the energy quantity is measured in kWh (kilo Watt hours).
        QUANTITY_UNIT_KWH = 1;
    }

    message TimeSeriesPoint {

        // The start of the time interval where the energy was produces/consumed.
        google.protobuf.Timestamp time = 1;

        /*
         * 3 digit scale decimal value of the energy quantity.
         * Value is only set when quality is not set to missing.
         */
        optional DecimalValue quantity = 2;

        // The aggregated quality currently represents a list of values suitable for creation of RSM-014 CIM XML messages.
        repeated QuantityQuality quantity_qualities = 3;
    }

    /*
     * The quality of the energy quantity.
     */
    enum QuantityQuality {
        /*
         * Unspecified is unused but according to best practice.
         * Read more at https://protobuf.dev/programming-guides/style/#enums.
         */
        QUANTITY_QUALITY_UNSPECIFIED = 0;
        QUANTITY_QUALITY_ESTIMATED = 1;
        QUANTITY_QUALITY_MEASURED = 2;
        QUANTITY_QUALITY_MISSING = 3;
        QUANTITY_QUALITY_CALCULATED = 4;
    }

    enum Resolution {
        /*
         * Unspecified is unused but according to best practice.
         * Read more at https://protobuf.dev/programming-guides/style/#enums.
         */
        RESOLUTION_UNSPECIFIED = 0;

        // States that each time series point represents a time interval of one quarter (15 minutes).
        RESOLUTION_QUARTER = 1;
    }
}
